// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureInformation should match snapshot. should display multiple features with pagination 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-header"
       aria-live="assertive"
  >
    <span id="wkp-popup-label">
    </span>
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1go4m0m-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            title="Schliessen"
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           alt="Schliessen"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
  </div>
  <div class="wkp-feature-information-body">
    <div class="wkp-netzkarte-popup">
      <div tabindex="0"
           role="button"
           aria-expanded="false"
           class="wkp-coordinate-toggle"
      >
        Koordinaten
      </div>
      <div class="wkp-coordinates-infos wkp-closed">
        <span class="wkp-projection-label">
        </span>
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
    <div style="display: flex; align-items: center; justify-content: center; height: 35px;"
         class="wkp-pagination-wrapper"
    >
      <span style="padding: 0px 10px; height: 25px; width: 25px;"
            class="wkp-pagination-button-wrapper"
      >
      </span>
      1 von 4
      <span style="padding: 0px 10px; height: 25px; width: 25px;"
            class="wkp-pagination-button-wrapper"
      >
        <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium wkp-pagination-button css-8yomva-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
                title="zurück"
                aria-label="zurück"
                data-testid="pagination-next-button"
        >
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ftj3l6-MuiSvgIcon-root"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="EastOutlinedIcon"
          >
            <path d="m15 5-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7z">
            </path>
          </svg>
          <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. should not display header 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-body">
    <div class="makeStyles-root-1">
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. using the info's popupComponent 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-header"
       aria-live="assertive"
  >
    <span id="wkp-popup-label">
    </span>
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1go4m0m-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            title="Schliessen"
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           alt="Schliessen"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
  </div>
  <div class="wkp-feature-information-body">
    <div class="wkp-netzkarte-popup">
      <div tabindex="0"
           role="button"
           aria-expanded="false"
           class="wkp-coordinate-toggle"
      >
        Koordinaten
      </div>
      <div class="wkp-coordinates-infos wkp-closed">
        <span class="wkp-projection-label">
        </span>
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. using the layers's popupComponent 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-header"
       aria-live="assertive"
  >
    <span id="wkp-popup-label">
    </span>
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1go4m0m-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            title="Schliessen"
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           alt="Schliessen"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
  </div>
  <div class="wkp-feature-information-body">
    <div class="wkp-netzkarte-popup">
      <div tabindex="0"
           role="button"
           aria-expanded="false"
           class="wkp-coordinate-toggle"
      >
        Koordinaten
      </div>
      <div class="wkp-coordinates-infos wkp-closed">
        <span class="wkp-projection-label">
        </span>
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
  </div>
</div>
`;
